# core85

./: .gitignore  CMakeLists.txt  NOTICES.md  README.md  RELEASE_NOTES_v1.0.md  runbook.md
.github/workflows/: ci.yml
docs/: Core85_SRS_v1.0.docx
src/core/: assembler.cpp  assembler.h  cpu.cpp  cpu.h  io_bus.cpp  io_bus.h  memory.cpp  memory.h  span.h
src/gui/: codeeditor.cpp  codeeditor.h  emulator_types.cpp  emulator_types.h  emulatorcontroller.cpp  emulatorcontroller.h  findreplacebar.cpp  findreplacebar.h  iopanel.cpp  iopanel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memoryviewer.cpp  memoryviewer.h  problemspanel.cpp  problemspanel.h  registerviewer.cpp  registerviewer.h  value_utils.cpp  value_utils.h  welcomepage.cpp  welcomepage.h
src/gui/components/: README.md
tests/: test_arithmetic.cpp  test_assembler.cpp  test_branch.cpp  test_cpu.cpp  test_data_transfer.cpp  test_instruction_matrix.cpp  test_interrupts.cpp  test_io.cpp  test_logical.cpp  test_memory.cpp  test_stack.cpp
tests/asm/: blink.asm  table.asm
